--- a/client/index.html
+++ b/client/index.html
@@ -4,11 +4,15 @@
     <meta charset="utf-8">
     <title>Multiplayer Shooter</title>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.slim.js"></script>
 	<link rel="stylesheet" href="style.css">
   </head>
   <body>
+  <canvas id="game">
+  <script src="../common.js"></script>
+  <script src="networking.js"></script><script src="player.js"></script>
   <script src="main.js"></script>
-  <script>connect("http://127.0.0.1:8001", { query: "username=peter"+Math.floor((Math.random() * 10) + 1)});</script>
+  
+  <script src="input.js"></script>
+  <script>start();connect("ws://127.0.0.1:8001","Player"+Math.floor((Math.random() * 99) + 1),);</script>
   </body>
 </html>
