--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,6 @@
   <script src="main.js"></script>
   
   <script src="input.js"></script>
-  <script>start();connect("wss://fuaze.nl/websocket","Player"+Math.floor((Math.random() * 99) + 1),);</script>
+  <script>start();connect("ws://127.0.0.1:8001","Player"+Math.floor((Math.random() * 99) + 1),);</script>
   </body>
 </html>
